Removal of warnings, cleansing of unused code...